[project]
name = "comfyui-haigc-mask-nodes"
description = "专业的遮罩处理节点套件 - 包含遮罩生成、选择、变换、调整和对比功能，为 ComfyUI 提供强大的遮罩处理能力"
version = "1.0.0"
license = { file = "LICENSE" }

requires-python = ">=3.9"

# 项目依赖 - 根据实际节点使用的库进行配置
dependencies = [
    "torch",
    "numpy",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
]

# 作者信息
authors = [
    { name = "HAIGC Mask Development Team", email = "" }
]

# 项目关键词
keywords = [
    "comfyui",
    "mask",
    "image-processing",
    "ai",
    "stable-diffusion",
    "mask-generator",
    "mask-transform",
]

# 分类标签
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/comfyui-haigc-mask-nodes"
Homepage = "https://github.com/YOUR_USERNAME/comfyui-haigc-mask-nodes"
Documentation = "https://github.com/YOUR_USERNAME/comfyui-haigc-mask-nodes#readme"
Issues = "https://github.com/YOUR_USERNAME/comfyui-haigc-mask-nodes/issues"

[tool.comfy]
# 发布者ID - 需要先在 Comfy Registry 注册获取
# 访问 https://registry.comfy.org/ 注册并获取您的 PublisherId
PublisherId = "YOUR_PUBLISHER_ID"

# 显示名称 - 在 ComfyUI 管理器中显示的名称
DisplayName = "HAIGC 遮罩处理套件"

# 图标 - 可选，支持 SVG, PNG, JPG, GIF (最大 800x400px)
# Icon = "https://your-domain.com/icon.png"

# 节点类别标签
[tool.comfy.tags]
categories = ["mask", "image-processing", "utility"]

